apps/chpay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chpay
  namespace: default
  labels:
    app: chpay
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: chpay
