apps/chpay/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chpay
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - chpay.wisv.ch
  # - chpay.ch.tudelft.nl
  rules:
  - backendRefs:
    - name: chpay
      port: 80
