apps/chpay/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: chpay-wisvch-redirect
  namespace: default
  labels:
    app: chpay
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
    - chpay.wisv.ch
  rules:
    - matches:
      - path: 
          type: PathPrefix
          value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: chpay.ch.tudelft.nl
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
            statusCode: 301
